# modern-attn

./: README.md  ablate_heads_ppl.py  analyze_results_sanity.ipynb  cluster_heads.py  extract_attn.py  extract_sentence_attention.py  modern_attn_test.ipynb  pipeline_de.py  pipeline_en.py  pipeline_rifel.py  pyproject.toml  relation_probes.py  sentence_attention.json  ud_loader.py  utils_io.py
dead_code/: pool_wordlevel.py  probes.py
