[project]
name = "modern-attn"
version = "0.1.0"
description = "Modern attention mechanism extraction and analysis tools for transformer models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.10.5",
    "scipy>=1.10.0",
]
